Converted to Java 17